<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.cryptojobboard.cryptojobboard.Employee.EmployeePortfolioActivity">

    <ImageView
        android:id="@+id/ivEmployee"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="16dp"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/profile_circle_975_sepia"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="16dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tvEmployeeName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingLeft="30dp"
        android:paddingTop="5dp"
        android:textSize="18dp"
        android:text="@string/employee_name"
        app:layout_constraintTop_toBottomOf="@id/ivEmployee"
         />
    <TextView
        android:id="@+id/tvEmployeeTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/employee_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:layout_marginRight="40dp"
        android:textSize="24dp"/>

    <TextView
        android:id="@+id/tvEmployeeRating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rating"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/tvEmployeeTitle"
        android:layout_marginTop="40dp"
        android:layout_marginRight="80dp"
        android:textSize="24dp"/>

    <ImageView
        android:id="@+id/ivStars"
        android:layout_width="100dp"
        android:layout_height="30dp"
        app:srcCompat="@drawable/rating_stars"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginRight="65dp"
        app:layout_constraintTop_toBottomOf="@id/tvEmployeeRating"/>

    <TextView
        android:id="@+id/tvAboutMe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingLeft="25dp"
        android:paddingTop="5dp"
        android:textSize="18dp"
        android:text="@string/about_me"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvEmployeeName"/>

    <TextView
        android:id="@+id/tvSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingLeft="25dp"
        android:paddingTop="5dp"
        android:textSize="18dp"
        app:layout_constraintTop_toBottomOf="@id/tvAboutMe"/>

    <TextView
        android:id="@+id/tvProjects"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:paddingLeft="25dp"
        android:paddingTop="5dp"
        android:textSize="18dp"
        android:text="@string/projects"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/tvSummary"
        />

    <ImageView
        android:id="@+id/ivPortfolio"
        android:layout_width="330dp"
        android:layout_height="300dp"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="100dp"
        android:layout_marginStart="16dp"
        app:srcCompat="@drawable/portfolio"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>


</android.support.constraint.ConstraintLayout>
